--- a/css/drink.css
+++ b/css/drink.css
@@ -149,16 +149,6 @@ body {
     margin-top: 2rem;
     font-size: 1rem;
 }
-.back-to-top {
-    position: absolute;
-    right: 18px;
-    top: 18px;
-    font-weight: 600;
-}
-.back-to-top:hover {
-    color: #fff;
-    text-decoration: underline;
-}
 .navbar-brand {
     color: rgb(0, 140, 255);
 }
@@ -168,4 +158,13 @@ body {
     color: #fff !important;
     border-color: #ffc107 !important;
     text-decoration: none;
+}
+.navbar-brand {
+    background: linear-gradient(90deg, #ffc107, #ff9800, #ff5722);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    font-weight: bold;
+    letter-spacing: 2px;
+    text-shadow: 1px 1px 8px rgba(0,0,0,0.18);
 }
