--- a/css/drink.css
+++ b/css/drink.css
@@ -113,7 +113,7 @@ body {
     margin-top: 8px;
     text-align: center;
     background: rgba(0, 0, 0, 0.6);
-    color: white;
+    color: #ffc107;
     padding: 6px 12px;
     border-radius: 6px;
     font-size: 0.9rem;
@@ -124,14 +124,17 @@ body {
     bottom: 12px;
     transform: translateX(-50%);
     width: 80%;
-    border: 1px solid #ffc107;
-    transition: background 0.2s, color 0.2s;
 }
-
 .btn-below:hover {
     background: rgba(0, 0, 0, 0.8);
 }
-
+.btn-outline-warning.btn-below:hover,
+.btn-outline-warning.btn-below:focus {
+    background-color: #ffc107;
+    color: black;
+    border-color: #ffc107;
+    text-decoration: none;
+}
 .tips-box {
     background: #e3f7f7;
     padding: 18px 20px;
@@ -152,13 +155,6 @@ body {
 .navbar-brand {
     color: rgb(0, 140, 255);
 }
-.btn-outline-warning.btn-below:hover,
-.btn-outline-warning.btn-below:focus {
-    background-color: #ffc107 !important;
-    color: #fff !important;
-    border-color: #ffc107 !important;
-    text-decoration: none;
-}
 .navbar-brand {
     background: linear-gradient(90deg, #ffc107, #ff9800, #ff5722);
     -webkit-background-clip: text;
@@ -171,7 +167,7 @@ body {
 .fade-in {
   opacity: 0;
   transform: translateY(30px);
-  transition: opacity 1s ease-out, transform 1s ease-out;
+  transition:  1s ease-out,  1s ease-out;
 }
 .fade-in.show {
   opacity: 1;
