--- a/css/fact.css
+++ b/css/fact.css
@@ -127,7 +127,7 @@ body {
 .fade-in {
   opacity: 0;
   transform: translateY(30px);
-  transition: opacity 1s ease-out, transform 1s ease-out;
+  transition:  1s ease-out,  1s ease-out;
 }
 .fade-in.show {
   opacity: 1;
