--- a/css/menuschnitzel.css
+++ b/css/menuschnitzel.css
@@ -88,7 +88,7 @@ footer {
 .fade-in {
   opacity: 0;
   transform: translateY(30px);
-  transition: opacity 1s ease-out, transform 1s ease-out;
+  transition:  1s ease-out,  1s ease-out;
 }
 .fade-in.show {
   opacity: 1;
